Spark 2.1 working in DC/OS 1.9